--- a/less/components/navs.less
+++ b/less/components/navs.less
@@ -348,6 +348,7 @@
 		font: normal ~"1.5em/120%" @subheadingFontFamily;
 		text-transform: uppercase;
 		text-shadow: none;
+		word-wrap: break-word;
 		color: @bodyText;
 		background-color: @blue;
 
